# PuffinOS

./: CMakeLists.txt  README.md  main.cpp
Command_Separator/: Command_Separator.cpp  Command_Separator.h  README.md
File_Class/: File.cpp  File.h  README.md
Folder_Class/: Folder.cpp  Folder.h  README.md
Network/: Network.cpp  Network.h  README.md
Process_Class/: Process.cpp  Process.h  README.md
PuffinOS_Class/: PuffinOS.cpp  PuffinOS.h  README.md
Terminal/: README.md  Terminal.cpp
Terminal/Error_Stream/: Error_Stream.cpp  Error_Stream.h  README.md
Time_Stamp/: README.md  Time_Stamp.cpp  Time_Stamp.h
